'3차작업완료'

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
               <div class="eventThum">
                 <div class="eventThumBg"></div>
                 <figure>
-                  <img src="./images/event2-7.jpg" alt="event2-7" />
+                  <img src="./images/event2-9.png" alt="event2-9" />
                 </figure>
               </div>
               <div class="eventDesc flex">
@@ -1003,6 +1003,7 @@
         <a href="#x">이벤트 더보기 +</a>
       </div>
     </section>
+    <section id="sect4"></section>
     <aside style="display: none">
       <ul class="popupWrap flex">
         <li>
