'4차작업완료'

--- a/index.html
+++ b/index.html
@@ -68,85 +68,71 @@
             </div>
             <ul class="slideThum flex">
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum1.jpg" alt="thum1"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum2.jpg" alt="thum2"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum3.jpg" alt="thum3"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum4.jpg" alt="thum4"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum5.jpg" alt="thum5"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum6.jpg" alt="thum6"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum7.jpg" alt="thum7"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum8.jpg" alt="thum8"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum9.jpg" alt="thum9"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum10.jpg" alt="thum10"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum11.jpg" alt="thum11"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum12.jpg" alt="thum12"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum13.jpg" alt="thum13"
                 /></a>
               </li>
               <li>
-                <div class="dim"></div>
                 <a href="#x"
                   ><img src="./images/slideThum14.jpg" alt="thum14"
                 /></a>
@@ -996,14 +982,210 @@
               </div>
             </a>
           </li>
-
         </ul>
       </article>
       <div class="moreBtn">
         <a href="#x">이벤트 더보기 +</a>
       </div>
     </section>
-    <section id="sect4"></section>
+    <section id="sect4">
+      <h2>REVIEW & INTERVIEW</h2>
+      <article class="slidePos">
+        <div class="slideContainer">
+          <div class="swiper mySwiper1">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review1.jpg" alt="review1" />
+                </figure>
+                <div class="textWrap">
+                  <p>예스24, 창립 24주년 기념 '2023 러브썸 페스티벌' 개최</p>
+                  <i>공연뉴스</i>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review2.png" alt="review2" />
+                </figure>
+                <div class="textWrap">
+                  <p>
+                    뮤지컬 < 브라더스 까라마조프 > - 대문호의 소설을 뮤지컬로
+                    만나다
+                  </p>
+                  <i>카툰</i>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review3.jpg" alt="review3" />
+                </figure>
+                <div class="textWrap">
+                  <p>예스24, 창립 24주년 기념 '2023 러브썸 페스티벌' 개최</p>
+                  <i>공연뉴스</i>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review1.jpg" alt="review1" />
+                </figure>
+                <div class="textWrap">
+                  <p>예스24, 창립 24주년 기념 '2023 러브썸 페스티벌' 개최</p>
+                  <i>공연뉴스</i>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review2.png" alt="review2" />
+                </figure>
+                <div class="textWrap">
+                  <p>
+                    뮤지컬 < 브라더스 까라마조프 > - 대문호의 소설을 뮤지컬로
+                    만나다
+                  </p>
+                  <i>카툰</i>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="dim"></div>
+                <figure>
+                  <img src="./images/review3.jpg" alt="review3" />
+                </figure>
+                <div class="textWrap">
+                  <p>예스24, 창립 24주년 기념 '2023 러브썸 페스티벌' 개최</p>
+                  <i>공연뉴스</i>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </article>
+    </section>
+    <section id="sect5">
+      <article>
+        <ul class="infoWrap flex">
+          <li>
+            <figure>
+              <img src="./images/tell.png" alt="tellNumber" />
+            </figure>
+            <p><span>평일</span> 09:00~18:00</p>
+            <p>
+              <span>토요일</span> 09:00~17:00<span
+                >(일요일 및 공휴일 휴무)</span
+              >
+            </p>
+          </li>
+          <li>
+            <ul class="flex">
+              <li>
+                <figure>
+                  <img src="./images/cca1.png" alt="공지사항" />
+                  <figcaption>공지사항</figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="./images/cca2.png" alt="이용안내" />
+                  <figcaption>이용안내</figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="./images/cca3.png" alt="FAQ" />
+                  <figcaption>FAQ</figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="./images/cca4.png" alt="티켓판매안내" />
+                  <figcaption>티켓판매안내</figcaption>
+                </figure>
+              </li>
+            </ul>
+          </li>
+          <li class="flex">
+            <div class="shortCuts">
+              <div class="snsWrap">
+                <figure>
+                  <img src="./images/social1.png" alt="페이스북" />
+                </figure>
+                <figure>
+                  <img src="./images/social2.png" alt="인스타그램" />
+                </figure>
+                <figure>
+                  <img src="./images/social3.png" alt="카카오톡" />
+                </figure>
+              </div>
+              <div class="storeWrap">
+                <figure>
+                  <img src="./images/appdown1.png" alt="구글플레이" />
+                </figure>
+                <figure>
+                  <img src="./images/appdown2.png" alt="앱스토어" />
+                </figure>
+              </div>
+            </div>
+            <figure>
+              <img src="./images/deduction.png" alt="소득공제" />
+            </figure>
+          </li>
+        </ul>
+      </article>
+    </section>
+    <footer>
+      <div class="footerMenu flex">
+        <ul class="flex">
+          <li>
+            <a href="#x">회사소개</a>
+          </li>
+          <li>
+            <a href="#x">이용약관</a>
+          </li>
+          <li>
+            <a href="#x"><b>개인정보처리방침</b></a>
+          </li>
+          <li>
+            <a href="#x">청소년보호정책</a>
+          </li>
+          <li>
+            <a href="#x">이용안내</a>
+          </li>
+          <li>
+            <a href="#x">티켓판매안내</a>
+          </li>
+        </ul>
+        <select name="Family Site" id="family">
+          <option value="" disabled selected>Family Site</option>
+          <option value="iSTYLE24">iSTYLE24</option>
+          <option value="한세실업">한세실업</option>
+          <option value="한세드림">한세드림</option>
+          <option value="컬리수">컬리수</option>
+        </select>
+      </div>
+      <div class="contactWrap flex">
+        <h2><img src="./images/flogoN.png" alt="풋터로고" /></h2>
+        <p>
+          <b>예스이십사㈜</b> 
+          <br />
+          서울시 영등포구 은행로 11, 5층~6층(여의도동,일신빌딩)
+          <br />
+          대표 김석환, 최세라 | 개인정보보호책임자 : 권민석 yes24help@yes24.com
+          <br />
+          사업자등록번호 229-81-37000 | 통신판매업신고 제 2005-02682호
+          <br />
+          호스팅 서비스사업자 : 예스이십사㈜
+          <br />
+          <br />
+          <b>Copyright © YES24 Corp. All Rights Reserved.</b> 
+        </p>
+      </div>
+    </footer>
     <aside style="display: none">
       <ul class="popupWrap flex">
         <li>
@@ -1062,7 +1244,7 @@
       </div>
     </aside>
     <!-- swiper js -->
-    <script src="./swiper-bundle.min.js"></script>
+    <script src="./swiper1-bundle.min.js"></script>
     <script name="swiper">
       var swiper = new Swiper(".mySwiper", {
         allowTouchMove: false,
@@ -1083,6 +1265,15 @@
         scrollbar: {
           el: ".swiper-scrollbar",
           hide: true,
+        },
+      });
+      var swiper1 = new Swiper(".mySwiper1", {
+        loop: true,
+        slidesPerView: 3,
+        spaceBetween: 60,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
         },
       });
     </script>
