--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@
         closeBtn.closest("aside").style.display = "none";
       });
 
-      //rank toggle
+      //rank,event toggle
       const tabs = document.querySelectorAll(".tabs li a");
       const contents = document.querySelectorAll(".contentsContainer ul");
       for (const tab of tabs) {
