최종 수정 완료

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -23,7 +26,7 @@
         </a>
         <h1>
           <a href="#x">
-            <img src="./images/header-logoN-w.png" alt="헤더로고">
+            <img src="./images/header-logoN-w.png" alt="헤더로고" />
           </a>
         </h1>
       </div>
@@ -45,10 +48,16 @@
           <li><a href="#x">이벤트</a></li>
         </ul>
         <ul class="gnb flex">
-          <li><input type="search"></li>
-          <li><a href="#x"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-          <li><a href="#x"><i class="fa-solid fa-user"></i></a></li>
-          <li><a href="#x"><i class="fa-sharp fa-regular fa-globe"></i></a></li>
+          <li><input type="search" /></li>
+          <li>
+            <a href="#x"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li>
+            <a href="#x"><i class="fa-solid fa-user"></i></a>
+          </li>
+          <li>
+            <a href="#x"><i class="fa-sharp fa-regular fa-globe"></i></a>
+          </li>
         </ul>
       </div>
     </header>
@@ -500,195 +509,13 @@
     <section id="sect3">
       <h2>EVENTS</h2>
       <ul class="tabs flex">
-        <li><a href="#all" style="color: #ec7d2c">전체보기</a></li>
+        <li><a href="#contents" style="color: #ec7d2c">전체보기</a></li>
         <li><a href="#current">진행중인 이벤트</a></li>
         <li><a href="#end">종료된 이벤트</a></li>
       </ul>
       <article class="contentsContainer">
-        <ul class="contentsWrap flex on" id="all">
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-1.jpg" alt="event1-1" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>뮤지컬 < 할란카운티 > 기대평 이벤트 </b>
-                <p>2023.04.24 ~ 2023.05.14 | 2023.05.15 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">18일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-2.jpg" alt="event1-2" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>뮤지컬 < 청춘기록 > 기대평 이벤트 </b>
-                <p>2023.04.25 ~ 2023.05.07 | 2023.05.08 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">11일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-3.jpg" alt="event1-3" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>경품이벤트</span>
-                <b>창작가무극 <신과 함께_저승편> 관람후기 이벤트 </b>
-                <p>2023.04.18 ~ 2023.05.07 | 2023.05.08 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">10일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-4.jpg" alt="event1-4" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>연극 < 시티즌 오브 헬 > 기대평 이벤트 </b>
-                <p>2023.04.13 ~ 2023.04.19 | 2023.04.20 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">17일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-5.jpg" alt="event1-5" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>넌버벌 마스크 연극 <더 메신저> 기대평 이벤트</b>
-                <p>2023.04.13 ~ 2023.04.25 | 2023.04.27 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">15일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-6.jpg" alt="event1-6" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>뮤지컬 < 라흐마니노프 > 관람 후기 이벤트 </b>
-                <p>2023.04.07 ~ 2023.04.22 | 2023.04.25 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">15일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-7.jpg" alt="event1-7" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>뮤지컬 < 왓 이프 > 기대평 이벤트</b>
-                <p>2023.04.06 ~ 2023.05.14 | 2023.05.17 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">15일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-8.jpg" alt="event1-8" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>뮤지컬 < 행복한 왕자 > 기대평 이벤트 </b>
-                <p>2023.04.03 ~ 2023.04.23 | 2023.04.24 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">11일 남음</p>
-            </a>
-          </li>
-          <li>
-            <a href="#x">
-              <div class="eventThum">
-                <!-- 200/280 -->
-                <div class="eventThumBg"></div>
-                <figure>
-                  <img src="./images/event1-9.jpg" alt="event1-9" />
-                </figure>
-              </div>
-              <div class="eventDesc flex">
-                <span>초대이벤트</span>
-                <b>코미디 연극 < 딜리버리 > 기대평 이벤트</b>
-                <p>2023.03.15 ~ 2023.04.03 | 2023.04.04 발표</p>
-              </div>
-              <div class="progressBar">
-                <span></span>
-              </div>
-              <p class="count">14일 남음</p>
-            </a>
-          </li>
-        </ul>
-        <ul class="contentsWrap flex" id="current">
-          <li>
+        <ul class="contentsWrap flex">
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -707,7 +534,7 @@
               <p class="count">18일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -726,7 +553,7 @@
               <p class="count">11일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -745,7 +572,7 @@
               <p class="count">10일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -764,7 +591,7 @@
               <p class="count">15일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -783,7 +610,7 @@
               <p class="count">25일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -802,7 +629,7 @@
               <p class="count">15일 남음</p>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -819,7 +646,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -836,7 +663,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents current on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -853,9 +680,7 @@
               </div>
             </a>
           </li>
-        </ul>
-        <ul class="contentsWrap flex" id="end">
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <!-- 200/280 -->
@@ -874,7 +699,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <!-- 200/280 -->
@@ -893,7 +718,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -911,7 +736,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -929,7 +754,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -947,7 +772,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -965,7 +790,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <div class="eventThumBg"></div>
@@ -983,7 +808,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <!-- 200/280 -->
@@ -1002,7 +827,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="contents end on">
             <a href="#x">
               <div class="eventThum">
                 <!-- 200/280 -->
@@ -1210,7 +1035,7 @@
       <div class="contactWrap flex">
         <h2><img src="./images/flogoN.png" alt="풋터로고" /></h2>
         <p>
-          <b>예스이십사㈜</b> 
+          <b>예스이십사㈜</b>
           <br />
           서울시 영등포구 은행로 11, 5층~6층(여의도동,일신빌딩)
           <br />
@@ -1221,7 +1046,7 @@
           호스팅 서비스사업자 : 예스이십사㈜
           <br />
           <br />
-          <b>Copyright © YES24 Corp. All Rights Reserved.</b> 
+          <b>Copyright © YES24 Corp. All Rights Reserved.</b>
         </p>
       </div>
     </footer>
@@ -1318,22 +1143,21 @@
     </script>
     <script>
       //header fixed
-      const header = document.querySelector('header')
-      const sect1 = document.querySelector('#sect1')
-      const logo = document.querySelector('.headerLeft img')
-      const defaultSrc = logo.getAttribute('src')
-      const changeSrc = logo.getAttribute('src').replace('-w', '-B')
-      window.addEventListener('scroll', () => {
-        const sect1Height = sect1.offsetHeight
-        if(this.scrollY>=sect1Height){
-          header.classList.add('fixed')
-          logo.setAttribute('src', changeSrc)
-        }else if(this.scrollY<sect1Height){
-          header.classList.remove('fixed')
-          logo.setAttribute('src', defaultSrc)
+      const header = document.querySelector("header");
+      const sect1 = document.querySelector("#sect1");
+      const logo = document.querySelector(".headerLeft img");
+      const defaultSrc = logo.getAttribute("src");
+      const changeSrc = logo.getAttribute("src").replace("-w", "-B");
+      window.addEventListener("scroll", () => {
+        const sect1Height = sect1.offsetHeight;
+        if (this.scrollY >= sect1Height) {
+          header.classList.add("fixed");
+          logo.setAttribute("src", changeSrc);
+        } else if (this.scrollY < sect1Height) {
+          header.classList.remove("fixed");
+          logo.setAttribute("src", defaultSrc);
         }
-      })
-      console.log(header)
+      });
       //slideThum slideUp
       const slideThum = document.querySelector(".slideThum");
       const scrollWrap = document.querySelector(".swiper-scrollbar");
@@ -1363,22 +1187,64 @@
       });
 
       //rank,event toggle
+      // const tabs = document.querySelectorAll(".tabs li a");
+      // const contents = document.querySelectorAll(".contentsContainer ul");
+      // for (const tab of tabs) {
+      //   tab.addEventListener("click", (e) => {
+      //     e.preventDefault();
+      //     console.log(tab);
+      //     const unitTabs = tab.closest("ul").querySelectorAll("a");
+      //     for (const unit of unitTabs) {
+      //       const allUnit = unit.getAttribute("href");
+      //       const href = document.querySelector(allUnit);
+      //       href.style.display = "none";
+      //       unit.style.color = "";
+      //     }
+      //     const getHref = tab.getAttribute("href");
+      //     const setHref = document.querySelector(getHref);
+      //     setHref.style.display = "flex";
+      //     tab.style.color = "#EC7D2C";
+      //   });
+      // }
+
+      //rank, event filter 추가
       const tabs = document.querySelectorAll(".tabs li a");
       const contents = document.querySelectorAll(".contentsContainer ul");
+      const contentList = document.querySelectorAll(".contents");
       for (const tab of tabs) {
         tab.addEventListener("click", (e) => {
           e.preventDefault();
-          console.log(tab);
+          //이벤트영역에서만 작동
+          const tabHref = tab.getAttribute("href").replace("#", "");
+          const allList = Array.from(contentList).filter((list) => {
+            return list.className.includes(tabHref);
+          });
+          //빈배열은 참이기때문에 length로 참 거짓 구분
+          if (allList.length) {
+            for (const hide of contentList) {
+              const hideAll = hide.closest(".contentsWrap").children;
+              for (const h of hideAll) {
+                h.classList.remove("on");
+              }
+            }
+            for (const l of allList) {
+              l.classList.add("on");
+            }
+          }
           const unitTabs = tab.closest("ul").querySelectorAll("a");
           for (const unit of unitTabs) {
             const allUnit = unit.getAttribute("href");
             const href = document.querySelector(allUnit);
-            href.style.display = "none";
+            if (href) {
+              href.style.display = "none";
+            }
             unit.style.color = "";
           }
           const getHref = tab.getAttribute("href");
           const setHref = document.querySelector(getHref);
-          setHref.style.display = "flex";
+          if (setHref) {
+            setHref.style.display = "flex";
+          }
           tab.style.color = "#EC7D2C";
         });
       }
